# axon

./: .gitignore  README.md  TESTING.md  block_ip  block_ip.c  build.sh  go.mod  go.sum  makefile  test.sh  test11.sh  test13.sh  test14.sh  xdp_block.c
api/: Cargo.toml
cmd/axon/: main.go
cmd/axond/: main.go
cmd/cli/: main.go
cmd/daemon/: main.go
ebpf/: .gitignore  block_ip.c  block_test.sh  ip.txt  makefile  readme.md  run.sh  test_firewall  test_firewall.c  test_firewall_live  test_firewall_live.c  xdp_block.c  xdp_firewall.c
ebpf/axon-runtime/: Cargo.toml  README.md
ebpf/axon-runtime/axon-runtime/: Cargo.toml  build.rs
ebpf/axon-runtime/axon-runtime-common/: Cargo.toml
ebpf/axon-runtime/axon-runtime-ebpf/: Cargo.toml
ebpf/axon-runtime/axon-runtime-ebpf/src/: main.rs
ebpf/ebpfc/: l3block  l3block.c  makefile
func-test/: speed.sh
internal/daemon/: daemon.go
internal/dns/: resolver.go
internal/ebpf/: manager.go
internal/grpc/: server.go
internal/l7/: engine.go
internal/logging/: hub.go
internal/storage/: store.go
packaging/DEBIAN/: control  postinst  prerm
packaging/etc/axon/: axon.conf
proto/: axon.proto  firewall.pb.go  firewall.proto
sinkhole/: Cargo.toml  block.rs  makefile  setup.sh  webs.txt
sinkhole/src/: main.rs
sinkhole/tests/: fqdn_test.rs
tests/: cli_dialer_test.go  dns_test.go  ebpf_logic_test.go  ebpf_test.go  grpc_integration_test.go  grpc_test.go  integration_test.go  l7_engine_test.go  l7_sni_test.go  logging_test.go  socket_level_test.go  storage_test.go  test_dns.go  test_ebpf.go  test_ebpf_logic.go  test_grpc.go  test_l7_sni.go  test_logging.go  test_storage.go
(+3 files in other folders)
