[package]
name = "axon-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.22"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
dashmap = "5"
anyhow = "1"

[[bin]]
name = "axon-runtime"
path = "src/main.rs"