[package]
name = "axon-runtime-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
axon-runtime-common = { path = "../axon-runtime-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "axon-runtime"
path = "src/main.rs"
