[package]
name = "axon-runtime-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
axon-runtime-common = { path = "../axon-runtime-common" }

network-types = "0.1.0"

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "axon-runtime"
path = "src/main.rs"
